# libhy_mcu_bak

./: .gitignore  Makefile.am  README.md  autogen.sh  build.sh  configure.ac  hy_mcu.pc.in
doc/at32f4xx/: .gitignore  Makefile.am  README.md
example/: Makefile.am  hy_module.h  main.c  protobuf-c-demo.c
src/: Makefile.am  hy_func_check.c  hy_system.c  hy_timer.c  hy_uart.c
src/at/: Makefile.am
src/at/at32f4xx/: Makefile.am  hy_system.c  hy_time.c
src/at/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.1/: Makefile.am
src/at/at32f4xx/lwip-2.1.2/port/: lwipopts.h
src/at32f4xx/: Makefile.am  hy_system.c  hy_timer.c  hy_uart.c
src/at32f4xx/3rd_lib/: Makefile.am
src/at32f4xx/3rd_lib/lwip-2.1.2/: Makefile.am
src/at32f4xx/3rd_lib/lwip-2.1.2/port/: Makefile.am  ethernetif.c
src/at32f4xx/3rd_lib/lwip-2.1.2/src/api/: Makefile.am
src/at32f4xx/3rd_lib/lwip-2.1.2/src/core/: Makefile.am
src/at32f4xx/3rd_lib/lwip-2.1.2/src/netif/: Makefile.am
src/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.0/: Makefile.am
src/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.0/Libraries/: Makefile.am
src/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.0/Libraries/AT32F4xx_StdPeriph_Driver/inc/: Makefile.am  at32f4xx_adc.h  at32f4xx_comp.h  at32f4xx_crc.h  at32f4xx_dac.h  at32f4xx_ertc.h  at32f4xx_exti.h  at32f4xx_pwr.h  at32f4xx_rcc.h  at32f4xx_rtc.h  at32f4xx_sdio.h  at32f4xx_spi.h  at32f4xx_syscfg.h  at32f4xx_usart.h  at32f4xx_wwdg.h  at32f4xx_xmc.h  misc.h
src/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.0/Libraries/AT32F4xx_StdPeriph_Driver/src/: Makefile.am  at32f4xx_bkp.c  at32f4xx_can.c  at32f4xx_comp.c  at32f4xx_crc.c  at32f4xx_dac.c  at32f4xx_ertc.c  at32f4xx_eth.c  at32f4xx_gpio.c  at32f4xx_i2c.c  at32f4xx_pwr.c  at32f4xx_rcc.c  at32f4xx_sdio.c  at32f4xx_spi.c  at32f4xx_tim.c  at32f4xx_usart.c  at32f4xx_wwdg.c  at32f4xx_xmc.c  misc.c
src/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.0/Libraries/CMSIS/CM4/: Makefile.am
src/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.1/: Makefile.am
src/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.1/Libraries/AT32F4xx_StdPeriph_Driver/inc/: at32f4xx_can.h  at32f4xx_dbgmcu.h  at32f4xx_dma.h  at32f4xx_flash.h  at32f4xx_gpio.h  at32f4xx_gpio_ex.h  at32f4xx_iwdg.h  at32f4xx_tim.h
src/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.1/Libraries/AT32F4xx_StdPeriph_Driver/src/: Makefile.am  at32f4xx_adc.c  at32f4xx_dma.c  at32f4xx_exti.c  at32f4xx_rtc.c
src/at32f4xx/Libraries/AT32F4xx_StdPeriph_Driver/: Makefile.am
src/at32f4xx/Libraries/AT32F4xx_StdPeriph_Driver/inc/: at32f4xx_adc.h  at32f4xx_bkp.h  at32f4xx_can.h  at32f4xx_comp.h  at32f4xx_dma.h  at32f4xx_ertc.h  at32f4xx_eth.h  at32f4xx_exti.h  at32f4xx_flash.h  at32f4xx_gpio.h  at32f4xx_i2c.h  at32f4xx_pwr.h  at32f4xx_rcc.h  at32f4xx_sdio.h  at32f4xx_spi.h  at32f4xx_tim.h  at32f4xx_xmc.h
src/at32f4xx/Libraries/AT32F4xx_StdPeriph_Driver/src/: Makefile.am  at32f4xx_acc.c  at32f4xx_bkp.c  at32f4xx_comp.c  at32f4xx_dac.c  at32f4xx_ertc.c  at32f4xx_eth.c  at32f4xx_exti.c  at32f4xx_flash.c  at32f4xx_gpio.c  at32f4xx_i2c.c  at32f4xx_pwr.c  at32f4xx_rcc.c  at32f4xx_rtc.c  at32f4xx_spi.c  at32f4xx_tim.c  at32f4xx_xmc.c
src/at32f4xx/Libraries/CMSIS/: Makefile.am
src/at32f4xx/Libraries/CMSIS/CM4/CoreSupport/: Makefile.am
src/at32f4xx/Utilities/AT32F403A_SLIB_Demo/Project_L0/: readme.txt
src/at32f4xx/Utilities/AT32F403A_SLIB_Demo/Project_L1/: readme.txt
src/at32f4xx/Utilities/AT32F413_SLIB_Demo/Project_L0/: readme.txt
src/at32f4xx/Utilities/AT32F413_SLIB_Demo/Project_L1/: readme.txt
src/at32f4xx/Utilities/AT32F415_SLIB_Demo/Project_L0/: readme.txt
src/at32f4xx/Utilities/AT32F415_SLIB_Demo/Project_L1/: readme.txt
src/at32f4xx/Utilities/AT32F415_SysMem_AP_Demo/run_in_SysMem/: at32f4xx_it.c  at32f4xx_it.h  main.c  readme.txt  run_in_SysMem.sct
src/at32f4xx/Utilities/AT32F4xx_Gen_Random_Number_Demo/: at32f4xx_conf.h  at32f4xx_it.c  at32f4xx_it.h  main.c  random.c  random.h  readme.txt  system_at32f4xx.c
src/at32f4xx/Utilities/AT32F4xx_Gen_Random_Number_Demo/MDK_v5/: JLinkLog.txt
src/at32f4xx/Utilities/AT32F4xx_IAP_Demo/: Delete_KEIL & IAR_Temp_Files.bat
src/at32f4xx/lwip-2.1.2/: Makefile.am
src/at32f4xx/lwip-2.1.2/port/: Makefile.am
src/at32f4xx/lwip-2.1.2/src/: Makefile.am
src/at32f4xx/lwip-2.1.2/src/api/: Makefile.am
src/at32f4xx/lwip-2.1.2/src/core/: Makefile.am
src/at32f4xx/lwip-2.1.2/src/netif/: Makefile.am
src/hc/: Makefile.am
src/hc/CMSIS/: Makefile.am
src/hc/hc32f003/: Makefile.am
src/hc/hc32f003/driver/: Makefile.am
src/hc/hc32f003/driver/inc/: bt.h  lvd.h  reset.h  vc.h
src/hc/hc32f003/driver/src/: Makefile.am
src/hc/hc32f003/mcu/: Makefile.am
src/hc/hc32f003/mcu/EWARM/: HDSC_HC32F003.svd
src/hc/hc32f003/mcu/common/: Makefile.am  hc32f003.h
src/hc/hc32l13x/: Makefile.am
src/hc/hc32l13x/driver/src/: Makefile.am  ddl.c
src/hc/hc32l13x/mcu/: Makefile.am
src/hc/hc32l13x/mcu/common/: Makefile.am  board_stkhc32l13x.h  startup_hc32l13x.s
src/hc32f003/: Makefile.am
src/hc32f003/CMSIS/Include/: Makefile.am
src/hc32f003/driver/inc/: Makefile.am  adc.h  adt.h  clk.h  ddl.h  gpio.h  i2c.h  pca.h  spi.h  trim.h  uart.h  wdt.h
src/hc32f003/driver/src/: Makefile.am  adt.c  clk.c  flash.c  gpio.c  interrupts_hc32f003.c  reset.c  trim.c
src/hc32f003/mcu/common/: Makefile.am  base_types.h  interrupts_hc32f003.h  startup_hc32f003.s  system_hc32f003.c  system_hc32f003.h
src/hc32f005/driver/inc/: adc.h  adt.h  bt.h  ddl.h  gpio.h  lvd.h  pca.h  reset.h  spi.h  sysctrl.h  trim.h  uart.h  vc.h
src/hc32f005/driver/src/: adc.c  adt.c  bt.c  crc.c  ddl.c  flash.c  i2c.c  lvd.c  pca.c  spi.c  sysctrl.c  trim.c  uart.c  vc.c
src/hc32f005/mcu/EWARM/: HC32F005.svd
src/hc32f005/mcu/EWARM/config/: hc32f005_ram.icf
src/hc32f005/mcu/common/: board_stkhc32f005.h  interrupts_hc32f005.c  interrupts_hc32f005.h  system_hc32f005.c  system_hc32f005.h
src/hc32l13x/: Makefile.am  hy_adc.c  hy_func_check.c  hy_gpio.c  hy_gpio_int.c  hy_system.c  hy_time.c  hy_uart.c
src/hc32l13x/driver/: Makefile.am
src/hc32l13x/driver/inc/: Makefile.am
src/hc32l13x/driver/src/: Makefile.am
src/hc32l13x/mcu/common/: Makefile.am
(+688 files in other folders)
