# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    06/07 2021 19:24
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        06/07 2021      create the file
# 
#     last modified: 06/07 2021 19:24
# ===============================================================

# ------------------
# defining variables
# ------------------
_dist_files_com     =

# ---------------------
# add necessary content
# ---------------------
_dist_files_com     += \
                       README.md \
                       ARTERY_AT32_MCU_PSG_v202009_sc.pdf \
                       AT32F403A_407_sLib_Demo_V1.0.1.zip \
                       AT32F403A_AT32F407_Get_started_guide_CH_V1.0.1.pdf \
                       AT32F4xx_StdPeriph_Lib_V1.2.8.zip \
                       DS_AT32F403A_V1.03.pdf \
                       RM_AT32F403A_407_V1.01.pdf

EXTRA_DIST          = $(_dist_files_com)
